Adding fonts and modified .js and .html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Electron tutorial app</title>
+		<title>Intel&reg; Render Kit&trade; Project Browser</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -29,12 +29,6 @@
 							<li><a id="getintouch-menu" data-section="getintouch" href="#">Get in touch</a></li>
 						</ul>
 					</nav>
-					<div class="version-info">
-						Tested with Electron v5.0.8
-					</div>
-					<div class="version-info">
-						(Currently running Electron v<script>document.write(process.versions.electron)</script>)
-					</div>
 				</div>
 			</section>
 
