--- a/sections/welcome.html
+++ b/sections/welcome.html
@@ -1,11 +1,10 @@
 <template class="section-template">
 <section id="welcome" class="wrapper style1 fullscreen intro">
   <div class="inner">
-    <h1>Electron tutorial app</h1>
-    <p>Hopefully this helps someone to get up to speed with electron.</p>
+    <h1>Intel&reg; Render Kit&trade; Project Browser</h1>
+    <p>Demonstration of the Intel&reg; Render Kit.</p>
     <ul class="actions">
       <li><a href="#one" id="learn-more-button" class="button scrolly">Learn more</a></li>
-      <li><a href="#one" id="launch-xeyes" class="button scrolly">Launch XEyes</a></li>
     </ul>
   </div>
 </section>
