--- a/windows/ipcwindow.html
+++ b/windows/ipcwindow.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Electron tutorial app - ipc</title>
+		<title>Intel&reg; Render Kit&trade; Project Browswer - IPC</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
