Adding assets and changes apropos to the project.

--- a/sections/ipcremote.html
+++ b/sections/ipcremote.html
@@ -7,6 +7,7 @@
         <p>Click the button below to send a message that is picked up in the main process and open a new window</p>
         <ul class="actions">
           <li><a href="#" id="open-secondwindow-button" class="button">Open Window</a></li>
+          <li><a href="#" id="launch-pathtracer-button" class="button">Launch Embree Pathtracer</a></li>
         </ul>
       </div>
     </div>
