--- a/sections/welcome.html
+++ b/sections/welcome.html
@@ -4,7 +4,8 @@
     <h1>Intel&reg; Render Kit&trade; Project Browser</h1>
     <p>Demonstration of the Intel&reg; Render Kit.</p>
     <ul class="actions">
-      <li><a href="#one" id="learn-more-button" class="button scrolly">Learn more</a></li>
+      <li><a href="#one" id="learn-more-button" class="button scrolly">Intel® oneAPI Rendering Toolkit</a></li>
+      <li><a href="#one" id="getting-started-guide-button" class="button scrolly">Getting Started Guide</a></li>
     </ul>
   </div>
 </section>
