--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>Intel Corporation&copy; 2020. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
